# digifinal

./: pyproject.toml
digifinal/: main.py
